--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,5 @@
 {
   "presets": [
-    ["env", {
-      "debug": true,
-      "targets": {
-        "node": "0.12"
-      }
-    }]
+    ["env"]
   ]
 }
